order + item crud

--- a/working.html
+++ b/working.html
@@ -39,7 +39,7 @@
             </tbody>
         </table>
     </div>
-    <div data-id="0" class="table-wrapper-item">
+    <div data-id="@oit" class="table-wrapper-item">
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -52,6 +52,11 @@
                 </tr>
             </thead>
             <tbody>
+            </tbody>
+        </table>
+        <button data-id="@oid" class="btn btn-info ctrl addItem"><span aria-hidden="true" class="glyphicon glyphicon-plus"></span> 訂單增補</button>
+    </div>
+</div>
                 <tr>
                     <td data-ctrl="product" style="width: 300px"></td>
                     <td data-ctrl="num">0</td>
@@ -62,8 +67,3 @@
                     <td data-ctrl="date" style="width: 150px"></td>
                     <td data-ctrl="line"></td>
                 </tr>
-            </tbody>
-        </table>
-        <button data-id="0" class="btn btn-info ctrl addItem"><span aria-hidden="true" class="glyphicon glyphicon-plus"></span> 訂單增補</button>
-    </div>
-</div>
