--- a/working.html
+++ b/working.html
@@ -28,7 +28,7 @@
                     <td data-ctrl="date" style="width: 150px"></td>
                     <td data-ctrl="date" style="width: 150px"></td>
                     <td>
-                        <button class="btn btn-warning">尚未出貨</button>
+                        <button class="btn btn-warning status" data-uid="@uid">尚未完成</button>
                     </td>
                     <td>
                         <button data-uid="@uid" type="button" data-toggle="modal" data-target="#delDialog" class="btn btn-danger ctrl predelete"><span aria-hidden="true" class="glyphicon glyphicon-trash"></span></button>
@@ -51,19 +51,8 @@
                     <th>產線</th>
                 </tr>
             </thead>
-            <tbody>
-            </tbody>
+            <tbody> </tbody>
         </table>
         <button data-id="@oid" class="btn btn-info ctrl addItem"><span aria-hidden="true" class="glyphicon glyphicon-plus"></span> 訂單增補</button>
     </div>
 </div>
-                <tr>
-                    <td data-ctrl="product" style="width: 300px"></td>
-                    <td data-ctrl="num">0</td>
-                    <td data-status="yes">
-                        <label class="label label-primary">尚未完成</label>
-                    </td>
-                    <td data-ctrl="text">無</td>
-                    <td data-ctrl="date" style="width: 150px"></td>
-                    <td data-ctrl="line"></td>
-                </tr>
