修正 battery 在表單中的問題

--- a/working.html
+++ b/working.html
@@ -45,6 +45,7 @@
                 <tr>
                     <th>產品編號/規格</th>
                     <th>數量</th>
+                    <th>配備電池</th>
                     <th>狀態</th>
                     <th>備註</th>
                     <th>排程時間</th>
